Got rid of spacing bug using universal 0 margins

--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
     --fifth_color: rgb(226, 226, 226);
 }
 
+* {
+    margin:0px;
+    padding:0px;
+    border:0px;
+}
+
 body {
     background-color: var(--first_color);
     color: var(--fifth_color);
@@ -13,6 +19,7 @@ body {
 
 .header {
     background-image: url("blocks.jpg");
+    background-size: cover;
     width:100%;
     height:300px;
 }
